--- a/src/Pages/todo/todo.css
+++ b/src/Pages/todo/todo.css
@@ -7,9 +7,32 @@
   background-color: rgb(221, 221, 221);
   margin-top: 20vh;
   padding: 20px 0;
+  margin-bottom: 10px;
   box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.21);
   border-radius: 20px;
 }
 .todo-title{
     font-family: "poppins";
+}
+
+.lb-show{
+  margin-left: 10px;
+}
+
+.btns-filter{
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+  margin: 0 10px;
+}
+.btn{
+  width: 90px;
+  height: 25px;
+  border-radius: 5px;
+  background-color: white;
+  cursor: pointer;
+  transition: 0.2s ease-in;
+}
+.btn:hover{
+  background-color: rgb(214, 214, 214);
 }
