--- a/src/components/TaskFrom.css
+++ b/src/components/TaskFrom.css
@@ -1,7 +1,7 @@
-form{
+.search-form{
     padding: 0 20px;
 }
-input[type='text']{
+.search-form input[type='text']{
     width: 20vw;
     height: 30px;
     border-radius: 50px 0 0 50px;
@@ -11,7 +11,7 @@ input[type='text']{
     user-select: none;
     outline: none;
 }
-button[type='submit']{
+.search-form button[type='submit']{
     height: 30px;
     width: 10vw;
     border: none;
