--- a/src/App.css
+++ b/src/App.css
@@ -5,5 +5,11 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+.App{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
+}
 
  
