--- a/src/Pages/todo/todo.css
+++ b/src/Pages/todo/todo.css
@@ -3,10 +3,10 @@
   flex-direction: column;
   align-items: center;
   gap: 20px;
-  min-height: 250px;
+  height: auto;
   background-color: rgb(221, 221, 221);
   margin-top: 20vh;
-  padding: 20px 0;
+  padding: 20px 20px;
   margin-bottom: 10px;
   box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.21);
   border-radius: 20px;
@@ -24,6 +24,7 @@
   gap: 10px;
   flex-wrap: wrap;
   margin: 0 10px;
+  margin-bottom: 20px;
 }
 .btn{
   width: 90px;
@@ -35,4 +36,12 @@
 }
 .btn:hover{
   background-color: rgb(214, 214, 214);
+}
+@media (max-width: 309px) {
+  .btn{
+    width: 100%;
+  }
+  .todo-container{
+    margin-top: 50px;
+  }
 }
