--- a/src/components/TodoItem.css
+++ b/src/components/TodoItem.css
@@ -1,5 +1,7 @@
 .btn-delete{
     width: 20px;
+    min-width: 20px;
+    height: 20px;
     align-items: center;
     border-radius: 50px;
     border: none;
